--- a/police/client/html/css/style.css
+++ b/police/client/html/css/style.css
@@ -12,55 +12,73 @@
 	font-style: normal;
 }
 
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
+html, body, {
+    height: 100%;
+}
 
 body {
-	margin: 0;
-}
-
-div.outer-div {
-	height: 100%;
-	width: 25%;
-}
-
-div.middle-div {
-	position: relative;
-	top: 40%;
-	width: 440px;
-	margin-left: 5%;
-	-webkit-transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-	transform: translateY(-50%);
+	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+	padding-top: 5px;
 }
 
 .menu {
+	margin-left: 10px;
+	width: 420px;
+	background: rgba(0, 0, 0, 0.8);
 	display: none;
 }
 
 .header {
-	max-width: 440px;
-	padding: 24px 12px;
-	font-size: 35px;
-	color: white;
-	text-align: center;
-	font-size: 50px;
-	font-family: 'SignPainter';
 	background: rgb(30,87,153);
 	background: url("../img/background.png") no-repeat;
+	color: #fff;
+	padding-top: 15px;
+	font-size: 52px;
+	font-family: 'SignPainter';
+	min-height: 66px;
+	text-align: center;
 	text-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
 }
 
+.subheader {
+	height: 35px;
+	color: #3e8fcc !important;
+	background: rgb(0, 0, 0);
+	box-shadow: 0px 5px 25px rgba(0, 0, 0, 0.5);
+	font-size: 18px;
+	padding-top: 10px;
+	padding-left: 10px;
+	overflow: hidden;
+}
+
 .content {
-	min-height: 50px;
-	max-width: 440px;
-	background: rgba(0, 0, 0, 0.9);
-	background: linear-gradient(to bottom, rgba(0,0,0,0.9) 0%, rgba(0,0,0,0.5) 100%);
+	background: linear-gradient(to bottom, rgba(0,0,0,0.2) 0%, rgba(0,0,0,0.8) 100%);
 	box-shadow: 0px 5px 25px rgba(0, 0, 0, 0.5);
 	user-select: none;
-	color: white;
-	font-size: 23px;
+	color: #fff;
+	font-size: 20px;
 	overflow: hidden;
-	font-family: 'Montserrat', sans-serif;
+}
+
+.list {
+	padding-left: 0;
+	margin-top: 0;
+	margin-bottom: 0;
+}
+
+ul li:nth-of-type(1n+9) {
+  display: none;
+}
+
+li {
+	position: relative;
+	padding: 10px;
+	font-size: 17px;
+	color: #D4D5D6;
+	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+	padding-top: 8px;
+	padding-left: 10px;
+	padding-bottom: 7px;
 }
 
 .item {
@@ -73,30 +91,10 @@ div.middle-div {
 	background: linear-gradient(to right, rgba(255,255,255,1) 0%, rgba(255,255,255,0.8) 100%);
 }
 
-.list {
-	padding-left: 0;
-	margin-top: 0;
-	margin-bottom: 0;
-}
-
-li {
-	position: relative;
-	padding: 10px;
-	font-size: 23px;
-	color: #D4D5D6;
-	font-family: 'Montserrat', sans-serif;
-	padding-top: 10px;
-	padding-left: 10px;
-	padding-bottom: 10px;
-}
-
-ul li:nth-of-type(1n+9) {
-  display: none;
-}
-
 .scroll {
-	width: 100%;
+	background: rgba(0, 0, 0, 0.7) url('../img/arrows_upanddown.jpg') center center no-repeat;
+	border-top: 1px solid rgba(255, 255, 255, 0.2);	
+	display: none;
 	height: 38px;
-	background: rgba(0, 0, 0, 0.4) url('../img/arrows_upanddown.jpg') center center no-repeat;
-	border-top: 2px solid rgba(255, 255, 255, 0.2);
+	width: 100%;
 }
